// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`error-found has a cause 1`] = `

<div>
  <div class="grid grid-cols-7 gap-4 py-2 border-b">
    <gui-logo classname="col-span-2 p-8">
    </gui-logo>
    <div class="col-span-5 relative pt-6 pb-1">
      <div class="flex ml-[580px]">
        <gui-mode-toggle>
        </gui-mode-toggle>
        <gui-button
          classname="ml-2"
          variant="outline"
        >
          <gui-layout-dashboard-icon size="12">
          </gui-layout-dashboard-icon>
          Back to Dashboard
        </gui-button>
      </div>
    </div>
  </div>
  <div class="grid grid-cols-5 pt-12">
    <div class="col-span3 col-start-2">
      <gui-title classname="flex text-2xl text-primary leading-10 p-6">
        <gui-battery-low-icon
          size="40"
          classname="mr-4"
        >
        </gui-battery-low-icon>
        Error Found!
      </gui-title>
      <p class="px-6">
        Failed because of...
      </p>
    </div>
  </div>
</div>

`;

exports[`render default 1`] = `

<div>
  <div class="grid grid-cols-7 gap-4 py-2 border-b">
    <gui-logo classname="col-span-2 p-8">
    </gui-logo>
    <div class="col-span-5 relative pt-6 pb-1">
      <div class="flex ml-[580px]">
        <gui-mode-toggle>
        </gui-mode-toggle>
        <gui-button
          classname="ml-2"
          variant="outline"
        >
          <gui-layout-dashboard-icon size="12">
          </gui-layout-dashboard-icon>
          Back to Dashboard
        </gui-button>
      </div>
    </div>
  </div>
  <div class="grid grid-cols-5 pt-12">
    <div class="col-span3 col-start-2">
      <gui-title classname="flex text-2xl text-primary leading-10 p-6">
        <gui-battery-low-icon
          size="40"
          classname="mr-4"
        >
        </gui-battery-low-icon>
        Error Found!
      </gui-title>
      <p class="px-6">
      </p>
    </div>
  </div>
</div>

`;
